Completed information for Resume index.html
Added information required for a complete resume alone with the links to the other 2 pages that i'm going to create.

--- a/index.html
+++ b/index.html
@@ -4,3 +4,53 @@
     <meta charset ="utf-8">
     <title>Project 1-Jeremiah Gatlin</title>
   </head>
+  <body>
+    <h2>Menu</h2>
+      <ul>
+        <li><a href="index.html"> Professional Resume</a></li>
+        <li><a href="mk.html">Mortal Kombat</a></li>
+        <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
+      </ul>
+    <h1>Jeremiah Gatlin</h1>
+    <h3><em>|Email: Jerryzgat@gmail.com| Phone Number: 773-383-9366| </em></h3>
+    <h2>Objective:</h2>
+    <p>To continue to be a driven and motivated honor-roll student with excellent organizational and interpersonal skills. Established  communication skills, intense attention to detail as well as a passion for efficiency when completing tasks. Looking to apply my leadership and teamwork abilities to succeed within any opportunity given for further professional growth.</p>
+    <h2>Education:</h2>
+    <ul>
+      <li>Sutherland Elementary School</li>
+      <li>Chicago High School for Agricultural Sciences</li>
+      <li> Advanced Courses:
+        <ol>
+          <li>Agricultural Finance and Economics</li>
+          <li>Dual Credit English 101</li>
+          <li>Dual Credit Spanish </li>
+          <li>Dual Credit Music Theory</li>
+          <li>Scores: | GPA:3.886 UW 4.659 W | Class Rank 10/186 | 1060 SAT |</li>
+        </ol>
+      </li>
+    </ul>
+    <h2>Work Experience</h2>
+    <h4>John Deere apprentice</h4>
+      <p>The John Deere apprenticeship is one designed for the first cohort of high school apprentices. The 2,000 hour program follows the 82 students into their sophomore year in college. The program allows students  to work both full-time and part-time.  students work with mentors to help them become successful in the field of IT And technological development. </p>
+    <h4>CTE Internship</h4>
+      <p>In this program we had the opportunity to do different things around the school such as tending to the garden, cleaning up the farm stand, giving tours to guests around the school, and helping the incoming sophomores with their SAE. This was an experience for us because we were able to learn how to work as team in a professional environment and learned how to divide tasks to work efficiently.</p>
+   
+    <h2>Leadership Affiliations</h2>
+    <ul>
+      <li>National FFA Organization member</li>
+      <li>Chapter FFA courtesy corp</li>
+      <li>Ag Sales CDE team Co-Captain</li>
+      <li>Ag Business CDE Co-Captain</li>
+      <li>Track and Field Team</li>
+    </ul>
+    <h2>Awards/Honors</h2>
+    <ul>
+      <li>Illinois FFA State Degree</li>
+      <li>Greenhand Degree</li>
+      <li>OSHA Certificate</li>
+      <li>Chapter Degree</li>
+      <li>Science Fair City Finalist</li>
+      <li>History Fair Silver Certificate</li>
+    </ul>
+  </body>
+</html>
