Added text to chiwhitesox.html

--- a/chiwhitesox.html
+++ b/chiwhitesox.html
@@ -11,3 +11,15 @@
         <li><a href="mk.html">Mortal Kombat</a></li>
         <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
       </ul>
+<h1>21-22 Chicago White Sox</h1>
+    <h2>2021 White Sox</h2>
+    <img src = "https://pbs.twimg.com/media/E__rzdhUUAEn1sc.jpg">
+    <p>The 2021 White Sox were one of Chicago's best sports teams.  They had the best record in the  American  League Central. The team played better than they had in previous years(not including the 2020 season).  Despite injuries that plagued the teamThis amazing team played well enough to make it to the ALDS(American League divisional series). Despite playing well during the season they were knocked out in the first round in the Championships. The team finished 93-69 Which was their best record in over 15 years.</p>
+    <h2>2022 White Sox</h2>
+    <img src = "https://cdn.vox-cdn.com/thumbor/_4NXVzeN0AidF1ITZC98fErWiR8=/0x0:3588x2392/1200x800/filters:focal(1255x525:1829x1099)/cdn.vox-cdn.com/uploads/chorus_image/image/70707950/1346197698.0.jpg">
+    <p>The 2022 White Sox was a shock to most of baseball community and a complete shock to the Chicago White Sox community. The team underperformed and played subpar pretty much the entire year. Much you like the 2021 season the White Sox had a plethora of injuries,  conflicts,  and questionable management.  they ended their year 81 and 81 at .500.  and undesirable finish for a teen that finished 24 games above .500 just the year before.</p>
+    <h2>The Unfortunate Future</h2>
+    <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDsC2IzGIQ33U5TUkMqWBZws4Qm2xlGD1UTw&usqp=CAU">
+    <p>The 2023 White Sox were a complete and utter disappointment finishing 61-101. For a team that were division champs 2 years prior, this regression was not singing.  Though unfortunate us White Sox fans look forward to a 2024 season with a much better outcome.</p>
+     <iframe src="https://youtu.be/G-ghF6Jvw5E?si=PunPEORDz9eLraSH"></iframe>
+    
