Edited index.html for appearance reasons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
       </ul>
     <h1>Jeremiah Gatlin</h1>
-    <h3><em>|Email: Jerryzgat@gmail.com| Phone Number: 773-383-9366| </em></h3>
+    <h3><em>Email: Jgatlin@hawk.iit.edu/Jzgatlin@cps.edu | Phone Number: 773-383-9366 </em></h3>
     <h2>Objective:</h2>
     <p>To continue to be a driven and motivated honor-roll student with excellent organizational and interpersonal skills. Established  communication skills, intense attention to detail as well as a passion for efficiency when completing tasks. Looking to apply my leadership and teamwork abilities to succeed within any opportunity given for further professional growth.</p>
     <h2>Education:</h2>
