Added /body and /html tagschiwhitesox.html

--- a/chiwhitesox.html
+++ b/chiwhitesox.html
@@ -22,4 +22,5 @@
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDsC2IzGIQ33U5TUkMqWBZws4Qm2xlGD1UTw&usqp=CAU" alt="white sox are bad">
     <p>The 2023 White Sox were a complete and utter disappointment finishing 61-101. For a team that were division champs 2 years prior, this regression was not singing.  Though unfortunate us White Sox fans look forward to a 2024 season with a much better outcome.</p>
      <iframe src="https://youtu.be/G-ghF6Jvw5E?si=PunPEORDz9eLraSH"></iframe>
-    
+  </body>
+</html>
