added tags mk.html

--- a/mk.html
+++ b/mk.html
@@ -21,5 +21,6 @@
     <h2>Story</h2>
     <img src = "https://i.kinja-img.com/image/upload/c_fill,f_auto,fl_progressive,g_center,h_675,pg_1,q_80,w_1200/trfe8as1drosiehkujqn.jpg" alt="Mortal Kombat 11 story mode">
     <p>Throughout its time Mortal Kombat has had many different stories both featured in movies and games.  one of the most well-known stories follow Mortal Kombat 9(2011). In the story they follow the Mortal Kombat tournament Hosted by the villain Shao Kahn.  within this story Raiden( Defender of Earthrealm) has prepared his champion Liu Kang( Earthrealm's  champion). The story ends with Earth's realm defeating Shao Kahn. </p>
-    
+  </body>
+</html>
     
