--- a/chiwhitesox.html
+++ b/chiwhitesox.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset ="utf-8">
     <title>Mortal Kombat</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>Menu</h2>
