--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset ="utf-8">
     <title>Project 1-Jeremiah Gatlin</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h2>Menu</h2>
