--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <nav>
+    <div id="main-menu">
     <h2>Menu</h2>
       <ul>
         <li><a href="index.html"> Professional Resume</a></li>
         <li><a href="mk.html">Mortal Kombat</a></li>
         <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
       </ul>
+      </div>
+    </nav>
     <h1>Jeremiah Gatlin</h1>
     <h3><em>Email: Jgatlin@hawk.iit.edu/Jzgatlin@cps.edu | Phone Number: 773-383-9366 </em></h3>
     <h2>Objective:</h2>
