--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <div id="main-menu">
-        <h2>Menu</h2>
+        <ul id="main-container">
           <ul>
           <li><a href="index.html"> Professional Resume</a></li>
           <li><a href="mk.html">Mortal Kombat</a></li>
@@ -16,6 +16,7 @@
           </ul>
       </div>
     </nav>
+    <section>
     <h1>Jeremiah Gatlin</h1>
     <h3><em>Email: Jgatlin@hawk.iit.edu/Jzgatlin@cps.edu | Phone Number: 773-383-9366 </em></h3>
     <h2>Objective:</h2>
@@ -56,5 +57,6 @@
         <li>Science Fair City Finalist</li>
         <li>History Fair Silver Certificate</li>
       </ul>
+    </section>
   </body>
 </html>
