--- a/chiwhitesox.html
+++ b/chiwhitesox.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Menu</h2>
-      <ul>
-        <li><a href="index.html"> Professional Resume</a></li>
-        <li><a href="mk.html">Mortal Kombat</a></li>
-        <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
-      </ul>
+    <nav>
+      <div id="main-menu">
+        <ul id="main-container">
+          <li><a href="index.html"> Professional Resume</a></li>
+          <li><a href="mk.html">Mortal Kombat</a></li>
+          <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
+          </ul>
+      </div>
+    </nav>
+    <section>
     <h1>21-22 Chicago White Sox</h1>
     <h2>2021 White Sox</h2>
     <img src = "https://pbs.twimg.com/media/E__rzdhUUAEn1sc.jpg" alt="White sox as champs">
@@ -23,5 +27,6 @@
     <img src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTDsC2IzGIQ33U5TUkMqWBZws4Qm2xlGD1UTw&usqp=CAU" alt="white sox are bad">
     <p>The 2023 White Sox were a complete and utter disappointment finishing 61-101. For a team that were division champs 2 years prior, this regression was not singing.  Though unfortunate us White Sox fans look forward to a 2024 season with a much better outcome.</p>
     <iframe src="https://youtu.be/G-ghF6Jvw5E?si=PunPEORDz9eLraSH"></iframe>
+    </section>
   </body>
 </html>
