--- a/mk.html
+++ b/mk.html
@@ -6,12 +6,16 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Menu</h2>
-      <ul>
-        <li><a href="index.html"> Professional Resume</a></li>
-        <li><a href="mk.html">Mortal Kombat</a></li>
-        <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
-      </ul>
+    <nav>
+      <div id="main-menu">
+        <ul id="main-container">
+          <li><a href="index.html"> Professional Resume</a></li>
+          <li><a href="mk.html">Mortal Kombat</a></li>
+          <li><a href="chiwhitesox.html">21-22 Chicago White Sox</a></li>
+          </ul>
+        </div>
+      </nav>
+    <section>
     <h1>MORTAL KOMBAT</h1>
     <img src = "https://blog.playstation.com/tachyon/2023/08/5f32bdf5fb471a72c6eef2d55144ebca856308bd.jpeg?resize=1088%2C612&crop_strategy=smart" alt="Mk1 banner and poster">
     <h2>About</h2>
